Product name change

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "billy-marketing-web",
+  "name": "coupon-marketing-web",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
